Add test vector

--- a/editaveis/apendices.tex
+++ b/editaveis/apendices.tex
@@ -6,9 +6,33 @@
 
 \input{editaveis/codigos}
 
-%\chapter{Segundo Apêndice}
+\chapter{Vetor de Teste}
 
-%Texto do segundo apêndice.
+Nesta seção, será disponibilizado exemplo de uso deste algoritmo, colocando a chave, o texto em claro e o texto cifrado correspondente.
+
+\textbf{Texto em claro:}
+
+Ashamedly aardvark towards surely a some when darn much in strategically then hey unthinking crud mindful cassowary quizzical cobra blameless oh frugal a far far rubbed the clung far eternally clever affectionately much since. Where hey llama lighted bech
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
+\textbf{Texto em claro com caracteres correspondentes da tabela ASCII:}
+
+65 115 104 97 109 101 100 108 121 32 97 97 114 100 118 97 114 107 32 116 111 119 97 114 100 115 32 115 117 114 101 108 121 32 97 32 115 111 109 101 32 119 104 101 110 32 100 97 114 110 32 109 117 99 104 32 105 110 32 115 116 114 97 116 101 103 105 99 97 108 108 121 32 116 104 101 110 32 104 101 121 32 117 110 116 104 105 110 107 105 110 103 32 99 114 117 100 32 109 105 110 100 102 117 108 32 99 97 115 115 111 119 97 114 121 32 113 117 105 122 122 105 99 97 108 32 99 111 98 114 97 32 98 108 97 109 101 108 101 115 115 32 111 104 32 102 114 117 103 97 108 32 97 32 102 97 114 32 102 97 114 32 114 117 98 98 101 100 32 116 104 101 32 99 108 117 110 103 32 102 97 114 32 101 116 101 114 110 97 108 108 121 32 99 108 101 118 101 114 32 97 102 102 101 99 116 105 111 110 97 116 101 108 121 32 109 117 99 104 32 115 105 110 99 101 46 32 87 104 101 114 101 32 104 101 121 32 108 108 97 109 97 32 108 105 103 104 116 101 100 32 98 101 99 104 10 183                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
+
+\textbf{Texto cifrado com caracteres correspondentes da tabela ASCII:}
+
+67 222 251 71 190 117 71 43 105 234 200 210 160 61 84 71 192 96 199 150 20 185 17 58 71 100 233 60 55 89 154 190 122 71 102 212 144 252 217 124 39 100 129 142 242 247 152 240 228 177 218 71 146 255 231 41 73 30 148 72 223 91 71 185 86 204 121 211 71 87 78 71 91 5 250 71 11 46 71 241 10 249 0 238 114 65 131 226 164 202 71 196 6 83 161 59 71 111 214 71 4 1 71 21 166 94 71 227 53 71 63 81 3 198 243 85 71 179 51 62 27 153 71 248 241 128 71 52 67 54 34 187 219 205 140 36 9 29 71 180 70 37 71 72 224 113 179 71 152 31 43 87 33 71 244 24 71 119165 71 160 183 71 188 7 236 71 218 220 71 73 116 71 222 56 16 221 71 12 76 203 74 71 250 8 71 217 237 138 2 90 71 135 146 22 193 176 75 143 71 210 69 248 71 120 126 156 18 71 4 215 125 71 20 207 88 71 240 38 03 71 159 133 106 71 237 139 71 253 169 71 121 44 118 227 64 71 222 196 13 71 99 151 71 76 208 71 160 141 135 66 216 71 64 171 229 71 57 132 93 71 44 137 71 103 245 71 64 112 71 71 201 71 48 19 174 71 176 209 194 244 50 23 120 71 68 172 253 14 71 240 181 71 26 232 71 178 173 71 150 149 71 98 163 71 255 48 35 71 31 63 71 96 127 71 106 254 71 178 246 71 92 182 71 180 107 71 26 21 71 213 195 71 148 168 71 66 180 71 43 130 71 200 155 71 191 213 71 157 230 71 85 147 71 165 49 71 184 189 145 206 71 135 98 71 93 119 15 71 82 123 71 236 239 71 109 52 71 38 28 71 56 104 71 38 175 71 27 26 71 66 184 71 121 11 71 198 12 71 73 109 71 129 45 71 118 15 8 71 213 110 71 61 157 71 189 92 71 160 159 71 215 97 77 71 26 115 71 245 4 71 82 99 71 83 170 71 88 191 71 96 235 71 234 42 40 71 194 188 71 247 136 71 125 68 71 115 47 71 118 111 71 83 192 71 255 225 71 13 101 71 170 162 71 164 79 71 141 186 71 164 25 71 57 102 71 109 17 71 252 32 71 193 134 71 37 108 71 193 95 71 115 82 71 249 71 95 57 71 26 71 130 80 71 34 197 160 160 
+
+\textbf{Chave Utilizada:}
+
+WfZ+azAOBU3mOEcXw7ZxoCNack1M/6atZOYkNUO9/zSnN/moVrYf
+
+qs+hcdUUJkZ4zk3tKdRVmFpohfW2dDF5+GhPZxlLDkogfSkQYZ5D
+
+e6gNkwUi8qI3T0IaHjKs8tYOJU3+hlMSLSfUTwKn4JEx+V7FUiAU
+
+P0xI1Cxh5ySRQQoJqOA9eNj85                                              
+
+
 
 \end{apendicesenv}
 
