Adding the RFC.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -100,3 +100,8 @@ title = {A new statistical testing for symmetric ciphers and hash functions},
 year = {2002}
 }
 
+@Article{strombergson-josefsson,
+author = {J. Strombergson and S. Josefsson},
+title = {Test Vectors for the Stream Cipher RC4},
+year = {2011}
+}
