--- a/capitulos/7-resultados.tex
+++ b/capitulos/7-resultados.tex
@@ -157,3 +157,7 @@ Tamanho do texto(caracteres) & Tempo Extra(ms) & Quantidade de Conflitos & Tempo
 \end{table}
 
 Percebe-se que a média de conflitos para cada tamanho de texto é aproximadamente a metade do tamanho do texto em claro. Outra percepção que pode ser obtida pela tabela, é que conforme a quantidade de conflitos aumenta, o tempo médio de resolução diminui.
+
+\section{Resultados de Vetores de Testes}
+
+Tendo como objetivo garantir que a minha implementação do algoritmo \textit{RC4} está correta, utilizei os testes citados por \citeauthor{strombergson-josefsson} na \textit{RFC6269}. Neste documento, no Anexo \ref{rfc}, temos diferentes tamanhos de chaves e o \textit{keystream} esperado. O resultado gerado pela implementação deste trabalho está em conformidade com os resultados apresentados no \textit{RFC} acima citado.
